Fix header logo size on mobile

--- a/main/static/main/css/header.css
+++ b/main/static/main/css/header.css
@@ -113,6 +113,12 @@
         height: 100px;
         background-size: auto 100px;
     }
+    .header .logo {
+        width: 70px;
+        position: absolute;
+        top: 13px;
+        left: 17px;
+    }
     #header-title {
         height: 100px;
         background-size: auto 100px;
